# ClariMeet

./: .gitignore  AUTOSERVICE.md  CSP_AND_GOOGLE_FIX.md  FIX_GOOGLE_404.md  GOOGLE_AUTH_SETUP.md  GOOGLE_LOGIN_FIX_GUIDE.md  GOOGLE_SIGNIN_TROUBLESHOOTING.md  OAUTH_ERROR_FIX.md  README.md  clarimeet.example.json  docker-compose.yml  index.js  middleware.ts  new_App.txt  next.config.mjs  oauth.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.lock.txt  requirements.universal.txt  tatus  temp_base.css  temp_ours.css  test-apis.js  test-env.js  update-video.js  webhook.js
.github/workflows/: blank.yml  sonar-project.properties
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/meeting-apps/: page.tsx
app/signup/: page.tsx
app/zoom-demo/: page.tsx
app/zoom-plugin/: layout.tsx  page.tsx
components/core/: dock.tsx
components/ui/: CardSwap.css  PillNav.css  PixelBlast.css  PixelBlast.tsx  access-grant-popup.tsx  animated-background.tsx  animated-dashboard-cards.tsx  animated-heading.tsx  animated-logo.tsx  animated-sidebar.tsx  canvas-reveal-effect.tsx  card-nav-new.tsx  card-nav.css  card-nav.tsx  card-swap.tsx  compact-animated-logo.tsx  container-scroll.tsx  dashboard-dock.tsx  (+29 more)
contexts/: AuthContext.tsx  transcript-context.tsx
data/: meetings.json
docs/: README.md
hooks/: use-dashboard-data.ts
lib/: google-auth.ts
pgdata/: postmaster.pid
prisma/: dev.db  schema.prisma
public/: card.glb
scripts/: check-db.js  update-meeting-video.js
services/: README.md
utils/: sync.js
(+100 files in other folders)
