[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarimeet"
version = "0.1.0"
description = "ClariMeet – meeting assistant core (step 1 scaffold)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="ClariMeet Team"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
clarimeet = "clarimeet.cli:main"

[project.optional-dependencies]
asr = ["openai-whisper>=20240930"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clarimeet"]
include-package-data = true

